--- a/HodEngine/DebugLayer/CMakeLists.txt
+++ b/HodEngine/DebugLayer/CMakeLists.txt
@@ -14,7 +14,10 @@ function(assign_source_group)
     endforeach()
 endfunction(assign_source_group)
 
-project(Core)
+project(DebugLayer)
+if (NOT TARGET Core)
+include(../Core/CMakeLists.txt)
+endif() 
 
 file(GLOB_RECURSE Srcs
         "${PROJECT_SOURCE_DIR}/src/*.cpp"
@@ -24,8 +27,16 @@ file(GLOB_RECURSE Srcs
 
 assign_source_group(${Srcs})
 		
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src)
-
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
+".."
+"../../SDK/SDL/include"
+"../../SDK/glm"
+"../../SDK/tinyobjloader"
+"../../SDK/stb"
+"../../SDK/SPIRV-Cross"
+"C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/include"
+)
+		
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
-
-add_library(Core SHARED ${Srcs})
+		
+add_library(DebugLayer SHARED ${Srcs})
