--- a/HodEngine/Renderer/CMakeLists.txt
+++ b/HodEngine/Renderer/CMakeLists.txt
@@ -40,6 +40,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
 "C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/include"
 )
 
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+
 add_library(Renderer SHARED ${Srcs})
 		
 target_link_libraries(Renderer
