--- a/HodEngine/Renderer/CMakeLists.txt
+++ b/HodEngine/Renderer/CMakeLists.txt
@@ -40,9 +40,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
 "C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/include"
 )
 
-set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
-
-add_library(Renderer SHARED ${Srcs})
+add_library(Renderer ${Srcs})
 		
 target_link_libraries(Renderer
 optimized "../../../Build/HodEngine/ImGui/Release/ImGui" debug "../../../Build/HodEngine/ImGui/Debug/ImGui"
