--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,7 @@ assign_source_group(${Srcs})
 
 add_executable(HodEngine ${Srcs})
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT HodEngine)
-set_property(TARGET HodEngine PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "../../Data")
+set_property(TARGET HodEngine PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "../Data")
 
 #if(MSVC)
 #	target_compile_options(HodEngine PRIVATE /W4 /WX)
@@ -58,34 +58,37 @@ set_property(TARGET HodEngine PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "../../Data
 include_directories(
 "${PROJECT_SOURCE_DIR}"
 "${PROJECT_SOURCE_DIR}/src"
-"../SDK/glm"
-"../SDK/SDL/include"
-"../SDK/tinyobjloader"
-"../SDK/stb"
-"../SDK/SPIRV-Cross"
-"C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/include"
+"HodEngine"
+"SDK/glm"
 )
 
 target_link_libraries(HodEngine
-optimized "../../../SDK/Build/PhysX_lib/release/PhysX_64" debug "../../../SDK/Build/PhysX_lib/debug/PhysX_64"
-optimized "../../../SDK/Build/PhysX_lib/release/PhysXCommon_64" debug "../../../SDK/Build/PhysX_lib/debug/PhysXCommon_64"
-optimized "../../../SDK/Build/PhysX_lib/release/PhysXExtensions_static_64" debug "../../../SDK/Build/PhysX_lib/debug/PhysXExtensions_static_64"
-optimized "../../../SDK/Build/PhysX_lib/release/PhysXFoundation_64" debug "../../../SDK/Build/PhysX_lib/debug/PhysXFoundation_64"
-optimized "../../../SDK/Build/SDL/Release/SDL2" debug "../../../SDK/Build/SDL/Debug/SDL2d"
-optimized "../../../SDK/Build/SDL/Release/SDL2main" debug "../../../SDK/Build/SDL/Debug/SDL2maind"
-optimized "../../../SDK/Build/SPIRV-Cross/Release/spirv-cross-core" debug "../../../SDK/Build/SPIRV-Cross/Debug/spirv-cross-core"
-optimized "../../../SDK/Build/tinyobjloader/Release/tinyobjloader" debug "../../../SDK/Build/tinyobjloader/Debug/tinyobjloader"
-optimized "../../../SDK/Build/glm/glm/Release/glm_static" debug "../../../SDK/Build/glm/glm/Debug/glm_static"
+optimized "HodEngine/Core/Release/Core" debug "HodEngine/Core/Debug/Core"
+optimized "HodEngine/Game/Release/Game" debug "HodEngine/Game/Debug/Game"
+optimized "HodEngine/Renderer/Release/Renderer" debug "HodEngine/Renderer/Debug/Renderer"
+optimized "HodEngine/Application/Release/Application" debug "HodEngine/Application/Debug/Application"
+optimized "HodEngine/Physic/Release/Physic" debug "HodEngine/Physic/Debug/Physic"
+optimized "HodEngine/ImGui/Release/ImGui" debug "HodEngine/ImGui/Debug/ImGui"
+optimized "HodEngine/DebugLayer/Release/DebugLayer" debug "HodEngine/DebugLayer/Debug/DebugLayer"
+optimized "../SDK/Build/SDL/Release/SDL2" debug "../SDK/Build/SDL/Debug/SDL2d"
+optimized "../SDK/Build/SDL/Release/SDL2main" debug "../SDK/Build/SDL/Debug/SDL2maind"
+optimized "../SDK/Build/SPIRV-Cross/Release/spirv-cross-core" debug "../SDK/Build/SPIRV-Cross/Debug/spirv-cross-core"
+optimized "../SDK/Build/tinyobjloader/Release/tinyobjloader" debug "../SDK/Build/tinyobjloader/Debug/tinyobjloader"
+optimized "../SDK/Build/glm/glm/Release/glm_static" debug "../SDK/Build/glm/glm/Debug/glm_static"
+optimized "../SDK/Build/PhysX_lib/release/PhysX_64" debug "../SDK/Build/PhysX_lib/debug/PhysX_64"
+optimized "../SDK/Build/PhysX_lib/release/PhysXCommon_64" debug "../SDK/Build/PhysX_lib/debug/PhysXCommon_64"
+optimized "../SDK/Build/PhysX_lib/release/PhysXExtensions_static_64" debug "../SDK/Build/PhysX_lib/debug/PhysXExtensions_static_64"
+optimized "../SDK/Build/PhysX_lib/release/PhysXFoundation_64" debug "../SDK/Build/PhysX_lib/debug/PhysXFoundation_64"
 optimized "C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/lib/vs2017/x64/release/libfbxsdk.lib" debug "C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/lib/vs2017/x64/debug/libfbxsdk.lib"
 optimized "d3d12.lib" debug "d3d12.lib"
 optimized "DXGI.lib" debug "DXGI.lib"
 )
 
 add_custom_command(TARGET HodEngine POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:debug>:"../../../SDK/Build/SDL/Debug/SDL2d.dll">$<$<CONFIG:release>:"../../../SDK/Build/SDL/Release/SDL2.dll"> $<TARGET_FILE_DIR:HodEngine>
-	COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:debug>:"../../../SDK/Build/PhysX_lib/debug/PhysX_64.dll">$<$<CONFIG:release>:"../../../SDK/Build/PhysX_lib/release/PhysX_64.dll"> $<TARGET_FILE_DIR:HodEngine>
-	COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:debug>:"../../../SDK/Build/PhysX_lib/debug/PhysXCommon_64.dll">$<$<CONFIG:release>:"../../../SDK/Build/PhysX_lib/release/PhysXCommon_64.dll"> $<TARGET_FILE_DIR:HodEngine>
-	COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:debug>:"../../../SDK/Build/PhysX_lib/debug/PhysXFoundation_64.dll">$<$<CONFIG:release>:"../../../SDK/Build/PhysX_lib/release/PhysXFoundation_64.dll"> $<TARGET_FILE_DIR:HodEngine>
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:debug>:"../SDK/Build/SDL/Debug/SDL2d.dll">$<$<CONFIG:release>:"../SDK/Build/SDL/Release/SDL2.dll"> $<TARGET_FILE_DIR:HodEngine>
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:debug>:"../SDK/Build/PhysX_lib/debug/PhysX_64.dll">$<$<CONFIG:release>:"../SDK/Build/PhysX_lib/release/PhysX_64.dll"> $<TARGET_FILE_DIR:HodEngine>
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:debug>:"../SDK/Build/PhysX_lib/debug/PhysXCommon_64.dll">$<$<CONFIG:release>:"../SDK/Build/PhysX_lib/release/PhysXCommon_64.dll"> $<TARGET_FILE_DIR:HodEngine>
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:debug>:"../SDK/Build/PhysX_lib/debug/PhysXFoundation_64.dll">$<$<CONFIG:release>:"../SDK/Build/PhysX_lib/release/PhysXFoundation_64.dll"> $<TARGET_FILE_DIR:HodEngine>
 	COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:debug>:"C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/lib/vs2017/x64/debug/libfbxsdk.dll">$<$<CONFIG:release>:"C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/lib/vs2017/x64/release/libfbxsdk.dll"> $<TARGET_FILE_DIR:HodEngine>
 )
 
