--- a/HodEngine/DebugLayer/CMakeLists.txt
+++ b/HodEngine/DebugLayer/CMakeLists.txt
@@ -37,6 +37,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
 "C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/include"
 )
 		
-set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
-		
-add_library(DebugLayer SHARED ${Srcs})
+add_library(DebugLayer ${Srcs})
