--- a/HodEngine/Game/CMakeLists.txt
+++ b/HodEngine/Game/CMakeLists.txt
@@ -40,9 +40,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
 "C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/include"
 )
 		
-set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
-		
-add_library(Game SHARED ${Srcs})
+add_library(Game ${Srcs})
 
 target_link_libraries(Game
 optimized "../../../Build/HodEngine/Core/Release/Core" debug "../../../Build/HodEngine/Core/Debug/Core"
