--- a/Data/imgui.ini
+++ b/Data/imgui.ini
@@ -9,7 +9,12 @@ Size=345,158
 Collapsed=0
 
 [Window][Selected Actor]
-Pos=8,11
-Size=339,1074
+Pos=9,6
+Size=348,433
+Collapsed=0
+
+[Window][Visualization]
+Pos=1640,5
+Size=275,104
 Collapsed=0
 
