--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,10 @@ endfunction(assign_source_group)
 project(HodEngine)
 if (NOT TARGET Core)
 add_subdirectory(HodEngine/Core)
-endif() 
+endif()
+if (NOT TARGET DebugLayer)
+add_subdirectory(HodEngine/DebugLayer)
+endif()  
 if (NOT TARGET ImGui)
 add_subdirectory(HodEngine/ImGui)
 endif() 
@@ -32,10 +35,7 @@ add_subdirectory(HodEngine/Renderer)
 endif() 
 if (NOT TARGET Game)
 add_subdirectory(HodEngine/Game)
-endif() 
-if (NOT TARGET DebugLayer)
-add_subdirectory(HodEngine/DebugLayer)
-endif() 
+endif()
 	
 file(GLOB_RECURSE Srcs
         "${PROJECT_SOURCE_DIR}/Test/src/*.cpp"
@@ -49,7 +49,7 @@ add_executable(HodEngine ${Srcs})
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT HodEngine)
 set_property(TARGET HodEngine PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "../Data")
 
-add_dependencies(HodEngine Core ImGui Physic Application Renderer Game DebugLayer)
+add_dependencies(HodEngine Core DebugLayer ImGui Physic Application Renderer Game)
 
 #if(MSVC)
 #	target_compile_options(HodEngine PRIVATE /W4 /WX)
