--- a/Data/imgui.ini
+++ b/Data/imgui.ini
@@ -9,12 +9,27 @@ Size=345,158
 Collapsed=0
 
 [Window][Selected Actor]
-Pos=9,6
+Pos=5,160
 Size=348,433
 Collapsed=0
 
 [Window][Visualization]
 Pos=1640,5
 Size=275,104
+Collapsed=0
+
+[Window][Gizmo]
+Pos=3,3
+Size=349,153
+Collapsed=0
+
+[Window][Physic]
+Pos=5,596
+Size=348,77
+Collapsed=0
+
+[Window][Renderer]
+Pos=6,676
+Size=348,58
 Collapsed=0
 
