--- a/HodEngine/Game/CMakeLists.txt
+++ b/HodEngine/Game/CMakeLists.txt
@@ -15,12 +15,30 @@ function(assign_source_group)
 endfunction(assign_source_group)
 
 project(Game)
+
 if (NOT TARGET Core)
 include(../Core/CMakeLists.txt)
 endif()
+
+if (NOT TARGET DebugLayer)
+include(../DebugLayer/CMakeLists.txt)
+endif()
+
+if (NOT TARGET ImGui)
+include(../ImGui/CMakeLists.txt)
+endif()
+
+if (NOT TARGET Application)
+include(../Application/CMakeLists.txt)
+endif()
+
+if (NOT TARGET Physic)
+include(../Physic/CMakeLists.txt)
+endif()
+
 if (NOT TARGET Renderer)
 include(../Renderer/CMakeLists.txt)
-endif() 
+endif()
 
 file(GLOB_RECURSE Srcs
         "${PROJECT_SOURCE_DIR}/src/*.cpp"
@@ -34,20 +52,17 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
 ".."
 "../../SDK/SDL/include"
 "../../SDK/glm"
-"../../SDK/tinyobjloader"
-"../../SDK/stb"
-"../../SDK/SPIRV-Cross"
-"C:/Program Files/Autodesk/FBX/FBX SDK/2019.2/include"
 )
 		
 add_library(Game ${Srcs})
 
-add_dependencies(Game Core Renderer)
+add_dependencies(Game Core DebugLayer ImGui Application Physic Renderer)
 
 target_link_libraries(Game
 optimized "../../../Build/HodEngine/Core/Release/Core" debug "../../../Build/HodEngine/Core/Debug/Core"
-optimized "../../../Build/HodEngine/Physic/Release/Physic" debug "../../../Build/HodEngine/Physic/Debug/Physic"
+optimized "../../../Build/HodEngine/DebugLayer/Release/DebugLayer" debug "../../../Build/HodEngine/DebugLayer/Debug/DebugLayer"
 optimized "../../../Build/HodEngine/ImGui/Release/ImGui" debug "../../../Build/HodEngine/ImGui/Debug/ImGui"
 optimized "../../../Build/HodEngine/Application/Release/Application" debug "../../../Build/HodEngine/Application/Debug/Application"
+optimized "../../../Build/HodEngine/Physic/Release/Physic" debug "../../../Build/HodEngine/Physic/Debug/Physic"
 optimized "../../../Build/HodEngine/Renderer/Release/Renderer" debug "../../../Build/HodEngine/Renderer/Debug/Renderer"
 )
