--- a/HodEngine/Physic/CMakeLists.txt
+++ b/HodEngine/Physic/CMakeLists.txt
@@ -18,6 +18,9 @@ project(Physic)
 if (NOT TARGET Core)
 include(../Core/CMakeLists.txt)
 endif() 
+if (NOT TARGET DebugLayer)
+include(../DebugLayer/CMakeLists.txt)
+endif() 
 
 file(GLOB_RECURSE Srcs
         "${PROJECT_SOURCE_DIR}/src/*.cpp"
@@ -36,9 +39,11 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
 
 add_library(Physic ${Srcs})
 
-add_dependencies(Physic Core)
+add_dependencies(Physic Core DebugLayer)
 
 target_link_libraries(Physic
+optimized "../../../Build/HodEngine/Core/Release/Core" debug "../../../Build/HodEngine/Core/Debug/Core"
+optimized "../../../Build/HodEngine/DebugLayer/Release/DebugLayer" debug "../../../Build/HodEngine/DebugLayer/Debug/DebugLayer"
 optimized "../../../SDK/Build/PhysX_lib/release/PhysX_64" debug "../../../SDK/Build/PhysX_lib/debug/PhysX_64"
 optimized "../../../SDK/Build/PhysX_lib/release/PhysXCommon_64" debug "../../../SDK/Build/PhysX_lib/debug/PhysXCommon_64"
 optimized "../../../SDK/Build/PhysX_lib/release/PhysXExtensions_static_64" debug "../../../SDK/Build/PhysX_lib/debug/PhysXExtensions_static_64"
