[Clean] Use Box2d instead of PhysX

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "SDK/rapidjson"]
 	path = SDK/rapidjson
 	url = https://github.com/Glordim/rapidjson
+[submodule "SDK/box2d"]
+	path = SDK/box2d
+	url = https://github.com/Glordim/box2d.git
