--- a/HodEngine/Application/CMakeLists.txt
+++ b/HodEngine/Application/CMakeLists.txt
@@ -1,47 +1,31 @@
 # Nous voulons un cmake "récent" pour utiliser les dernières fonctionnalités
 cmake_minimum_required(VERSION 3.4)
 
-function(assign_source_group)
-    foreach(_source IN ITEMS ${ARGN})
-        if (IS_ABSOLUTE "${_source}")
-            file(RELATIVE_PATH _source_rel "${CMAKE_CURRENT_SOURCE_DIR}" "${_source}")
-        else()
-            set(_source_rel "${_source}")
-        endif()
-        get_filename_component(_source_path "${_source_rel}" PATH)
-        string(REPLACE "/" "\\" _source_path_msvc "${_source_path}")
-        source_group("${_source_path_msvc}" FILES "${_source_rel}")
-    endforeach()
-endfunction(assign_source_group)
-
 project(Application)
 if (NOT TARGET Core)
 include(../Core/CMakeLists.txt)
 endif() 
 
 file(GLOB_RECURSE Srcs
-        "${PROJECT_SOURCE_DIR}/src/*.cpp"
-        "${PROJECT_SOURCE_DIR}/src/*.h"
-		"${PROJECT_SOURCE_DIR}/src/*.inl"
-        )
+	"${PROJECT_SOURCE_DIR}/src/*.cpp"
+	"${PROJECT_SOURCE_DIR}/src/*.h"
+	"${PROJECT_SOURCE_DIR}/src/*.inl"
+)
 
 assign_source_group(${Srcs})
-		
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
 ".."
-"../../SDK/SDL/include"
-"../../SDK/glm"
-"../../SDK/tinyobjloader"
-"../../SDK/stb"
-"../../SDK/SPIRV-Cross"
-"C:/Program Files/Autodesk/FBX/FBX SDK/2020.0.1/include"
+"${SDK_DIR}/SDL/include"
+"${SDK_DIR}/glm"
 )
-	
+
 add_library(Application ${Srcs})
 
 add_dependencies(Application Core)
 
 target_link_libraries(Application
-optimized "../../../SDK/Build/SDL/Release/SDL2" debug "../../../SDK/Build/SDL/Debug/SDL2d"
-optimized "../../../SDK/Build/SDL/Release/SDL2main" debug "../../../SDK/Build/SDL/Debug/SDL2maind"
+Core
+optimized "${SDK_DIR}/SDL/Release/SDL2.lib" debug "${SDK_DIR}/Build/SDL/Debug/SDL2d.lib"
+optimized "${SDK_DIR}/SDL/Release/SDL2main.lib" debug "${SDK_DIR}/Build/SDL/Debug/SDL2maind.lib"
 )
