--- a/HodEngine/DebugLayer/CMakeLists.txt
+++ b/HodEngine/DebugLayer/CMakeLists.txt
@@ -1,19 +1,6 @@
 # Nous voulons un cmake "récent" pour utiliser les dernières fonctionnalités
 cmake_minimum_required(VERSION 3.4)
 
-function(assign_source_group)
-    foreach(_source IN ITEMS ${ARGN})
-        if (IS_ABSOLUTE "${_source}")
-            file(RELATIVE_PATH _source_rel "${CMAKE_CURRENT_SOURCE_DIR}" "${_source}")
-        else()
-            set(_source_rel "${_source}")
-        endif()
-        get_filename_component(_source_path "${_source_rel}" PATH)
-        string(REPLACE "/" "\\" _source_path_msvc "${_source_path}")
-        source_group("${_source_path_msvc}" FILES "${_source_rel}")
-    endforeach()
-endfunction(assign_source_group)
-
 project(DebugLayer)
 if (NOT TARGET Core)
 include(../Core/CMakeLists.txt)
@@ -29,9 +16,9 @@ assign_source_group(${Srcs})
 		
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
 ".."
-"../../SDK/glm"
+"${SDK_DIR}/glm"
 )
-		
+
 add_library(DebugLayer ${Srcs})
 
 add_dependencies(DebugLayer Core)
