--- a/HodEngine/Core/CMakeLists.txt
+++ b/HodEngine/Core/CMakeLists.txt
@@ -1,37 +1,23 @@
 # Nous voulons un cmake "récent" pour utiliser les dernières fonctionnalités
 cmake_minimum_required(VERSION 3.4)
 
-function(assign_source_group)
-    foreach(_source IN ITEMS ${ARGN})
-        if (IS_ABSOLUTE "${_source}")
-            file(RELATIVE_PATH _source_rel "${CMAKE_CURRENT_SOURCE_DIR}" "${_source}")
-        else()
-            set(_source_rel "${_source}")
-        endif()
-        get_filename_component(_source_path "${_source_rel}" PATH)
-        string(REPLACE "/" "\\" _source_path_msvc "${_source_path}")
-        source_group("${_source_path_msvc}" FILES "${_source_rel}")
-    endforeach()
-endfunction(assign_source_group)
-
 project(Core)
 
 file(GLOB_RECURSE Srcs
-        "${PROJECT_SOURCE_DIR}/src/*.cpp"
-        "${PROJECT_SOURCE_DIR}/src/*.h"
-		"${PROJECT_SOURCE_DIR}/src/*.inl"
-        )
+	"${PROJECT_SOURCE_DIR}/src/*.cpp"
+	"${PROJECT_SOURCE_DIR}/src/*.h"
+	"${PROJECT_SOURCE_DIR}/src/*.inl"
+)
 
 assign_source_group(${Srcs})
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
 ".."
-"../../SDK"
-"../../SDK/glm"
+"${SDK_DIR}/glm"
 )
 
 add_library(Core ${Srcs})
 
 target_link_libraries(Core
-optimized "../../../SDK/Build/glm/glm/Release/glm_static" debug "../../../SDK/Build/glm/glm/Debug/glm_static"
+optimized "${SDK_DIR}/Build/glm/glm/Release/glm_static.lib" debug "${SDK_DIR}/Build/glm/glm/Debug/glm_static.lib"
 )
